@@ -2,22 +2,11 @@ package nz.ac.canterbury.seng302.gardenersgrove.controller;
 
 import nz.ac.canterbury.seng302.gardenersgrove.component.DailyWeather;
 import nz.ac.canterbury.seng302.gardenersgrove.component.WeatherResponseData;
-import nz.ac.canterbury.seng302.gardenersgrove.entity.Friendship;
-import nz.ac.canterbury.seng302.gardenersgrove.entity.Garden;
-import nz.ac.canterbury.seng302.gardenersgrove.entity.HomePageLayout;
-import nz.ac.canterbury.seng302.gardenersgrove.entity.Plant;
-import nz.ac.canterbury.seng302.gardenersgrove.entity.User;
-import nz.ac.canterbury.seng302.gardenersgrove.entity.UserInteraction;
+import nz.ac.canterbury.seng302.gardenersgrove.entity.*;
 import nz.ac.canterbury.seng302.gardenersgrove.model.FriendModel;
 import nz.ac.canterbury.seng302.gardenersgrove.model.RecentGardenModel;
 import nz.ac.canterbury.seng302.gardenersgrove.model.RecentPlantModel;
-import nz.ac.canterbury.seng302.gardenersgrove.service.FriendshipService;
-import nz.ac.canterbury.seng302.gardenersgrove.service.GardenService;
-import nz.ac.canterbury.seng302.gardenersgrove.service.PlantService;
-import nz.ac.canterbury.seng302.gardenersgrove.service.SecurityService;
-import nz.ac.canterbury.seng302.gardenersgrove.service.UserInteractionService;
-import nz.ac.canterbury.seng302.gardenersgrove.service.UserService;
-import nz.ac.canterbury.seng302.gardenersgrove.service.WeatherService;
+import nz.ac.canterbury.seng302.gardenersgrove.service.*;
 import nz.ac.canterbury.seng302.gardenersgrove.util.FriendshipStatus;
 import nz.ac.canterbury.seng302.gardenersgrove.util.ItemType;
 import org.slf4j.Logger;
@@ -29,14 +18,10 @@ import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestParam;
-import org.springframework.web.bind.annotation.ModelAttribute;
 
-import java.time.LocalDate;
-import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.Locale;
-import java.util.stream.Collectors;
+import java.util.Objects;
 
 /**
  * This is a basic spring boot controller for the home page,
@@ -66,9 +51,9 @@ public class HomePageController {
      */
     @Autowired
     public HomePageController(UserService userService, AuthenticationManager authenticationManager,
-                              GardenService gardenService, PlantService plantService,
-                              FriendshipService friendshipService, SecurityService securityService, WeatherService weatherService,
-                              UserInteractionService userInteractionService) {
+            GardenService gardenService, PlantService plantService,
+            FriendshipService friendshipService, SecurityService securityService, WeatherService weatherService,
+            UserInteractionService userInteractionService) {
         this.userService = userService;
         this.gardenService = gardenService;
         this.plantService = plantService;
@@ -76,16 +61,6 @@ public class HomePageController {
         this.securityService = securityService;
         this.userInteractionService = userInteractionService;
         this.weatherService = weatherService;
-    }
-
-    /**
-     * Adds the loggedIn attribute to the model for all requests
-     *
-     * @param model
-     */
-    @ModelAttribute
-    public void addLoggedInAttribute(Model model) {
-        model.addAttribute("loggedIn", securityService.isLoggedIn());
     }
 
     /**
@@ -100,106 +75,6 @@ public class HomePageController {
     }
 
     /**
-     * Adds a default user and gardens to the database for testing purposes
-     */
-    public void addDefaultContent() {
-        DateTimeFormatter formatter = DateTimeFormatter.ofPattern("dd/MM/yyyy").withLocale(Locale.ENGLISH);
-        LocalDate date = LocalDate.parse("01/01/2001", formatter);
-
-        // Add a default user to speed up manual testing.
-        User johnDoe = new User("John",
-                "Doe",
-                "gardenersgrovetest@gmail.com",
-                date);
-        userService.addUser(johnDoe, "Password1!");
-        userService.verifyUser(johnDoe);
-
-        for (int i = 1; i < 12; i++) {
-            Garden sampleGarden = new Garden(
-                    "John's Garden " + i,
-                    "Some Description here",
-                    "114 Ilam Road",
-                    "Ilam",
-                    "Christchurch",
-                    "8041",
-                    "New Zealand",
-                    15.0,
-                    true,
-                    "-43.5214643",
-                    "172.5796159",
-                    johnDoe);
-            sampleGarden = gardenService.addGarden(sampleGarden);
-
-            for (int k = 0; k < 12; k++) {
-                plantService.addPlant("Test Plant #" + k, 2,
-                        "test", LocalDate.now(), sampleGarden.getGardenId());
-            }
-        }
-
-        Garden sampleGarden2 = new Garden(
-                "John's Private garden ",
-                "Some Description here",
-                "114 Ilam Road",
-                "Ilam",
-                "Christchurch",
-                "8041",
-                "New Zealand",
-                15.0,
-                false,
-                "-43.5214643",
-                "172.5796159",
-                johnDoe);
-
-        gardenService.addGarden(sampleGarden2);
-
-        if (!userService.emailInUse("janedoe@email.com")) {
-
-            // Add a default user to speed up manual testing.
-            User janeDoe = new User("Jane",
-                    "Doe",
-                    "janedoe@email.com",
-                    date);
-            userService.addUser(janeDoe, "Password1!");
-            userService.verifyUser(janeDoe);
-
-            for (int i = 0; i < 1; i++) {
-                Garden sampleGarden = new Garden(
-                        "Jane's Garden " + i,
-                        "Some Description here",
-                        "114 Ilam Road",
-                        "Ilam",
-                        "Christchurch",
-                        "8041",
-                        "New Zealand",
-                        15.0,
-                        true,
-                        "-43.5214643",
-                        "172.5796159",
-                        janeDoe);
-                sampleGarden = gardenService.addGarden(sampleGarden);
-
-                for (int k = 0; k < 1; k++) {
-                    plantService.addPlant("Test Plant " + k, 2,
-                            "test", LocalDate.now(), sampleGarden.getGardenId());
-                }
-
-            }
-            Friendship friendship = friendshipService.addFriendship(janeDoe, johnDoe);
-            friendshipService.updateFriendShipStatus(friendship.getId(), FriendshipStatus.ACCEPTED);
-        }
-
-        if (!userService.emailInUse("badguy@email.com")) {
-            User badGuy = new User("Bad",
-                    "Guy",
-                    "badguy@email.com",
-                    date);
-            userService.addUser(badGuy, "Badguy1!");
-            userService.verifyUser(badGuy);
-            userService.banUser(badGuy, 1);
-        }
-    }
-
-    /**
      * This function is called when a GET request is made to /home
      *
      * @param model
@@ -209,11 +84,6 @@ public class HomePageController {
     public String home(Model model) {
 
         logger.info("GET /home");
-
-        // Add a test user with test gardens and test plants
-        if (!userService.emailInUse("gardenersgrovetest@gmail.com")) {
-            addDefaultContent();
-        }
 
         User user = securityService.getCurrentUser();
 
@@ -250,21 +120,7 @@ public class HomePageController {
 
         // Check gardens that need watering and add them
         List<Garden> gardens = gardenService.getAllUsersGardens(user.getId());
-        List<Garden> gardensRefreshed = new ArrayList<>();
-        List<Garden> gardensNeedWatering = new ArrayList<>();
-
-        for (Garden garden : gardens) {
-            if (garden.getLastLocationUpdate() == null || garden.getLastWaterCheck() == null ||
-                    garden.getLastLocationUpdate().isAfter(garden.getLastWaterCheck())) {
-                gardensRefreshed.add(garden);
-            }
-            if (garden.getNeedsWatering()) {
-                gardensNeedWatering.add(garden);
-            }
-        }
-
-        List<Garden> newGardensNeedWatering = getGardensForWatering(gardensRefreshed);
-        gardensNeedWatering.addAll(newGardensNeedWatering);
+        List<Garden> gardensNeedWatering = getGardensForWatering(gardens);
 
         model.addAttribute("gardensNeedWatering", gardensNeedWatering);
         model.addAttribute("gardens", gardens);
@@ -334,7 +190,7 @@ public class HomePageController {
         return plantList.stream()
                 .map(plant -> new RecentPlantModel(plant, plant.getGarden(), plant.getGarden().getOwner(),
                         securityService.isOwner(plant.getGarden().getOwner().getId())))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -388,22 +244,31 @@ public class HomePageController {
      *                watering
      */
     private List<Garden> getGardensForWatering(List<Garden> gardens) {
+        if (gardens.isEmpty()) {
+            return gardens;
+        }
 
         List<Garden> gardensNeedWatering = new ArrayList<>();
 
         List<WeatherResponseData> weatherDataList = weatherService.getWeatherForGardens(gardens);
 
+        if (weatherDataList == null) {
+            logger.error("Error getting weather data for gardens");
+            return gardensNeedWatering;
+        }
+
         for (int i = 0; i < gardens.size(); i++) {
             Garden garden = gardens.get(i);
             boolean needsWater = gardenNeedsWatering(garden, weatherDataList.get(i));
-            garden.setNeedsWatering(needsWater);
-            gardenService.changeGardenNeedsWatering(garden.getGardenId(), needsWater);
 
+            if (!Objects.equals(needsWater, garden.getNeedsWatering())) {
+                garden.setNeedsWatering(needsWater);
+                gardenService.changeGardenNeedsWatering(garden.getGardenId(), needsWater);
+            }
             if (needsWater) {
                 gardensNeedWatering.add(garden);
             }
         }
-
         return gardensNeedWatering;
     }
 
@@ -431,8 +296,8 @@ public class HomePageController {
 
         return garden.getNeedsWatering()
                 || beforeYesterdayWeather.getDescription().equals("Sunny") &&
-                yesterdayWeather.getDescription().equals("Sunny") &&
-                currentWeather.getDescription().equals("Sunny");
+                        yesterdayWeather.getDescription().equals("Sunny") &&
+                        currentWeather.getDescription().equals("Sunny");
 
     }
 
