@@ -12,7 +12,6 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
-import org.springframework.web.bind.annotation.CrossOrigin;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestParam;
@@ -22,17 +21,18 @@ import java.io.IOException;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
-
 
 /**
  * Controller for plant info endpoints
  */
 @Controller
 public class PlantWikiController {
+
     Logger logger = LoggerFactory.getLogger(PlantWikiController.class);
+
     private final PlantInfoService plantInfoService;
+
     private static final int PLANT_SPECIES_LIMIT = 3000;
 
     @Autowired
@@ -40,27 +40,28 @@ public class PlantWikiController {
         this.plantInfoService = plantInfoService;
     }
 
-
     /**
      * Helper to handle adding api call results to model
      * and catching any potential exceptions that may occur
+     * 
      * @param search term entered by user
-     * @param model hashmap of endpoints attributes
+     * @param model  hashmap of endpoints attributes
      */
-    private void addAPIResultsToModel(String search, Long plantId, Model model){
+    private void addAPIResultsToModel(String search, Long plantId, Model model) {
         try {
-            if(Objects.nonNull(search)){
+            if (Objects.nonNull(search)) {
 
                 JsonNode plantList = plantInfoService.getPlantListJson(search, false);
 
                 if (plantList.has("X-RateLimit-Remaining") && plantList.get("X-RateLimit-Remaining").asInt() <= 0) {
-                    throw new HttpStatusCodeException(HttpStatus.TOO_MANY_REQUESTS, "Surpassed API Rate Limit") {};
+                    throw new HttpStatusCodeException(HttpStatus.TOO_MANY_REQUESTS, "Surpassed API Rate Limit") {
+                    };
                 }
 
                 List<PlantSearchModel> plants = StreamSupport.stream(plantList.get("data").spliterator(), false)
                         .map(PlantSearchModel::new)
                         .filter(plant -> plant.getId() <= PLANT_SPECIES_LIMIT)
-                        .collect(Collectors.toList());
+                        .toList();
 
                 model.addAttribute("plants", plants);
 
@@ -70,14 +71,21 @@ public class PlantWikiController {
 
             } else {
                 JsonNode plantDetails = plantInfoService.getPlantDetailsJson(String.valueOf(plantId), false);
+
+                if (plantDetails.has("X-RateLimit-Remaining") && plantDetails.get("X-RateLimit-Remaining").asInt() <= 0) {
+                    throw new HttpStatusCodeException(HttpStatus.TOO_MANY_REQUESTS, "Surpassed API Rate Limit") {
+                    };
+                }
+
                 PlantInfoModel plantInfo = new PlantInfoModel(plantDetails);
                 model.addAttribute("plant", plantInfo);
             }
 
         } catch (UnavailableException e) {
             logger.error("UnavailableException occurred: {}", e.getMessage());
-            model.addAttribute("searchError", "Plant Wiki searching is a limited resource, which doesn't grow on trees. " +
-                    "Please try again");
+            model.addAttribute("searchError",
+                    "Plant Wiki searching is a limited resource, which doesn't grow on trees. " +
+                            "Please try again");
 
         } catch (HttpStatusCodeException e) {
             if (e.getStatusCode() == HttpStatus.TOO_MANY_REQUESTS) {
@@ -86,8 +94,10 @@ public class PlantWikiController {
                         "Please try again tomorrow. In the meantime you may wish to check out our default plants");
             } else {
                 logger.error("HTTP error occurred: {}", e.getMessage());
-                model.addAttribute("searchError", "An error occurred while retrieving plant data. Please try again later.");
+                model.addAttribute("searchError",
+                        "An error occurred while retrieving plant data. Please try again later.");
             }
+
         } catch (IOException e) {
             logger.error("IOException occurred while fetching plant data: {}", e.getMessage());
             model.addAttribute("searchError", "There was an error retrieving plant data. Please try again later.");
@@ -105,27 +115,28 @@ public class PlantWikiController {
 
     /**
      * Helper to add the default plant info objects to model
+     * 
      * @param model hashmap of endpoint attributes
      */
-    private void addDefaultPlantsToModel(Model model){
+    private void addDefaultPlantsToModel(Model model) {
         List<PlantSearchModel> plants = plantInfoService.getAllDefaultPlants().stream()
                 .map(PlantSearchModel::new)
-                .collect(Collectors.toList());
+                .toList();
         model.addAttribute("plants", plants);
     }
 
     /**
-     * This method creates the get mapping for the plant wiki page where users can search for plant information.
+     * This method creates the get mapping for the plant wiki page where users can
+     * search for plant information.
+     * 
      * @param search the query string
-     * @param model the model
+     * @param model  the model
      * @return template for the plant wiki page
      */
     @GetMapping("/plant-wiki")
-    @CrossOrigin
-    public String viewPlantWiki(@RequestParam(name = "search", required = false)
-                                String search,
-                                Model model) {
-        logger.info("GET /plant-wiki with search term: {}", search);
+    public String viewPlantWiki(@RequestParam(name = "search", required = false) String search,
+            Model model) {
+        logger.info("GET /plant-wiki");
 
         if (search != null && !search.isEmpty()) {
             model.addAttribute("searchTerm", search);
@@ -139,19 +150,21 @@ public class PlantWikiController {
     }
 
     /**
-     * This method creates the get mapping for the plant details page which displays information for a certain plant.
-     * @param plantId               id of the plant
-     * @param model                 the model
-     * @return                      template for the plant details pge
+     * This method creates the get mapping for the plant details page which displays
+     * information for a certain plant.
+     * 
+     * @param plantId id of the plant
+     * @param model   the model
+     * @return template for the plant details pge
      */
     @GetMapping("/plant-wiki/{plantId}/details")
     public String viewPlantDetails(@PathVariable Long plantId,
-                                   Model model) {
+            Model model) {
         logger.info("GET /plant-wiki/{}/details", plantId);
 
         Optional<PlantInfo> plant = plantInfoService.getPlantById(plantId);
 
-        if(plant.isPresent()){
+        if (plant.isPresent()) {
             PlantInfoModel plantInfo = new PlantInfoModel(plant.get());
 
             model.addAttribute("plant", plantInfo);
