@@ -16,14 +16,12 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.ModelAttribute;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.ResponseBody;
 
 import java.time.LocalDateTime;
 import java.util.*;
-import java.util.stream.Collectors;
 
 /**
  * Controller for viewing all public gardens
@@ -37,26 +35,15 @@ public class PublicGardensController {
     private final SecurityService securityService;
     private final GardenTagService gardenTagService;
     private final FriendshipService friendshipService;
-    private static final int COUNT_PER_PAGE = 10;
+    private static final int COUNT_PER_PAGE = 9;
 
     @Autowired
     public PublicGardensController(GardenService gardenService, SecurityService securityService,
-                                   FriendshipService friendshipService, GardenTagService gardenTagService) {
+            FriendshipService friendshipService, GardenTagService gardenTagService) {
         this.gardenService = gardenService;
         this.securityService = securityService;
         this.friendshipService = friendshipService;
         this.gardenTagService = gardenTagService;
-    }
-
-
-    /**
-     * Adds the loggedIn attribute to the model for all requests
-     * 
-     * @param model
-     */
-    @ModelAttribute
-    public void addLoggedInAttribute(Model model) {
-        model.addAttribute("loggedIn", securityService.isLoggedIn());
     }
 
     /**
@@ -70,7 +57,7 @@ public class PublicGardensController {
         return "redirect:/public-gardens/search/1";
     }
 
-    private void handlePagniation(int page, int listLength,List<Plant> plants, Model model) {
+    private void handlePagniation(int page, int listLength, List<Plant> plants, Model model) {
         int totalPages = (int) Math.ceil((double) listLength / COUNT_PER_PAGE);
         int startIndex = (page - 1) * COUNT_PER_PAGE;
         int endIndex = Math.min(startIndex + COUNT_PER_PAGE, listLength);
@@ -79,10 +66,9 @@ public class PublicGardensController {
         model.addAttribute("lastPage", totalPages);
         model.addAttribute("startIndex", startIndex + 1);
         model.addAttribute("endIndex", endIndex);
-        model.addAttribute("plants",plants.subList(startIndex, endIndex));
-        model.addAttribute("plantCount",plants.size());
+        model.addAttribute("plants", plants.subList(startIndex, endIndex));
+        model.addAttribute("plantCount", plants.size());
     }
-
 
     /**
      * returns a page with the 10 most recent public gardens based on search and on
@@ -102,7 +88,7 @@ public class PublicGardensController {
 
         List<String> paramList = new ArrayList<>();
 
-        if (!searchInput.equals("")) {
+        if (!searchInput.isEmpty()) {
             paramList.add("searchInput=" + searchInput);
         }
 
@@ -152,7 +138,7 @@ public class PublicGardensController {
                     .sorted(Comparator.comparing(Garden::getCreationDate).reversed())
                     .skip((long) (pageNumber - 1) * COUNT_PER_PAGE)
                     .limit(COUNT_PER_PAGE)
-                    .collect(Collectors.toList());
+                    .toList();
 
             startIndex = (pageNumber - 1) * COUNT_PER_PAGE + 1;
             endIndex = Math.min(startIndex + COUNT_PER_PAGE, totalGardens);
@@ -195,22 +181,20 @@ public class PublicGardensController {
         User currentUser = securityService.getCurrentUser();
         User gardenOwner = garden.getOwner();
 
-        if (!garden.getIsPublic() ) {
+        boolean isOwner = (Objects.equals(currentUser.getId(), gardenOwner.getId()));
+
+        if (!garden.getIsPublic()) {
             FriendshipStatus userOwnerRelationship;
-            if(Objects.equals(gardenOwner.getId(), currentUser.getId()))
-            {
+            if (Objects.equals(gardenOwner.getId(), currentUser.getId())) {
                 userOwnerRelationship = FriendshipStatus.ACCEPTED;
-            }
-            else
-            {
-                userOwnerRelationship = friendshipService.checkFriendshipStatus(gardenOwner,currentUser);
+            } else {
+                userOwnerRelationship = friendshipService.checkFriendshipStatus(gardenOwner, currentUser);
             }
 
-
-            if (userOwnerRelationship != FriendshipStatus.ACCEPTED)
-            {
+            if (userOwnerRelationship != FriendshipStatus.ACCEPTED) {
                 response.setStatus(HttpServletResponse.SC_FORBIDDEN);
-                model.addAttribute("message", "This isn't your patch of soil. No peeking at the neighbor's garden without an invite!");
+                model.addAttribute("message",
+                        "This isn't your patch of soil. No peeking at the neighbor's garden without an invite!");
                 return "403";
             }
 
@@ -218,14 +202,13 @@ public class PublicGardensController {
 
         securityService.addUserInteraction(gardenId, ItemType.GARDEN, LocalDateTime.now());
 
-        User user = garden.getOwner();
-        handlePagniation(page,garden.getPlants().size(),garden.getPlants(),model);
+        handlePagniation(page, garden.getPlants().size(), garden.getPlants(), model);
 
-        model.addAttribute("isOwner", false);
+        model.addAttribute("isOwner", isOwner);
         model.addAttribute("garden", new GardenDetailModel(garden));
         model.addAttribute("weather", null);
-        model.addAttribute("profilePicture", user.getProfilePictureFilename());
-        model.addAttribute("userName", user.getFirstName() + " " + user.getLastName());
+        model.addAttribute("profilePicture", gardenOwner.getProfilePictureFilename());
+        model.addAttribute("userName", gardenOwner.getFirstName() + " " + gardenOwner.getLastName());
 
         List<GardenTagRelation> tagRelationsList = gardenTagService.getGardenTagRelationByGarden(garden);
 
